Refactor password management to handle physical duplicates, including methods for detection and cleanup, and enhance synchronization logic to prevent duplicate entries during remote updates.